--- a/01-gallery.html
+++ b/01-gallery.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Image gallery</title>
+    <link rel="stylesheet" href="./basicLightbox.min.css" />
+
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/styles.css" />
   </head>
@@ -13,7 +15,7 @@
 
     <!-- Add gallery items to this list -->
     <div class="gallery"></div>
-
-    <script src="js/01-gallery.js" type="module"></script>
+    <script src="./basicLightbox.min.js"></script>
+    <script src="./js/01-gallery.js" type="module"></script>
   </body>
 </html>
